tests/out/error/other/return.in.bt
struct Foo{}

fun value_missing() i32 {
	return
}

fun void_function() {
	return 'some value'
}

fun another_void() {
	return x
}

fun type_mismatch() i32 {
	return x

	return 'not i32'
}
